# fastapi-boilerplate

./: .dockerignore  .gitignore  CREATE_PROJECT_README.md  Dockerfile  Makefile  README.md  config.common.yaml  config.dev.yaml  config.prod.yaml  config.test.yaml  create_project.py  docker-compose.yml  main.py  pyproject.toml  run.py
app/: __init__.py  config.py
app/core/: auth.py  config.py  logging_config.py  security.py  status.py  yaml_config.py
app/middleware/: api_key_auth.py  request_logging.py  trailing_slash.py
app/routers/: api.py  auth.py  health.py  upload.py
config/: logging_config.yaml  logging_config_prod.yaml
tests/: __init__.py  conftest.py  test_pattern_matcher.py
tests/middleware/: __init__.py  test_api_key_auth.py  test_middleware.py  test_path_matching.py  test_path_pattern.py  test_request_logging.py  test_trailing_slash.py
